--- a/styles/style.css
+++ b/styles/style.css
@@ -22,18 +22,19 @@ a:hover{
     float: left;
 }
 #logo a{
-    width: 238px;
-    height: 21px;
-    text-indent: -9999px;
-    display: block;
-    background: url(../img/logo.png); 
+   color: red;
+    
 }
 /*Barra de navegação*/
 header{
     padding:  15px 0px;
     height: 55px;
 }
+nav{
+    color: whitesmoke;
+}
 nav ul{
+    
     list-style: none;
     margin: 20px;
     float: right;
