--- a/styles/formulario.css
+++ b/styles/formulario.css
@@ -7,7 +7,7 @@
 /* Elementos com o ID "titulo" */
 #titulo {
   font-family: sans-serif;
-  color: #380B61;
+  color: #af670a;
   margin-left: 7%;
 } 
 
@@ -29,10 +29,10 @@ fieldset {
 
 /* Elemento de tag <body> */
 body{
-  background-color: #F0F8FF;
+  background: #f4f2ec repeat-x;
   font-family: sans-serif;
   font-size: 1em;
-  color: #59429d;
+  color: #af670a;
   margin-left: 36%;
   margin-top: 2%;
   justify-content: center;
@@ -42,7 +42,7 @@ body{
 input, select, textarea, button {
   font-family: sans-serif;
   font-size: 1em;
-  color: #59429d;
+  color: #af670a;
   border-radius: 5px;
 }
 
@@ -64,7 +64,7 @@ input, select, textarea, button {
 /* Elementos de classe "campo" de tag <label> */
 .campo label {
   margin-bottom: 0.2em;
-  color: #59429d;
+  color: #af670a;
   display: block;
 }
 
